# scientific-programming-PeterK-UWP

./: README.md  pyproject.toml
Complex/: ComplexRoot.py
PythonTesting/: maxwellian_distribution.py
SI_Coding_Folder/: day 1  dictionary_read_error.py  functions_2_28_23.py  hertzsrung.py  project_outline.py  si_session_2_14_23.py  si_session_2_16_23.py  si_session_2_21_23.py  si_session_2_23_23.py  si_session_2_28_23.py  si_session_2_7_23.py  si_session_2_9_23.py  si_session_3_2_23.py  si_session_3_7_23.py  si_session_3_9_23.py  wave_packet.py
final_exam/: Kveton_PHYS241FinalScript.py  bivariate_statistics.py  convert_units.py  equations_of_state.py  fit_curve_array.py  generate_matrix.py  plot_data_with_fit.py  quadratic_fit.py  two_column_text_read.py
final_stuff/: annotate_graph.py  bivariate_statistics.py  final_exam.py  final_project.py  final_review.py  fit_curve_array.py  lowest_eigenvectors.py  plot_data_with_fit.py  quadratic_fit.py  two_column_text_read.py
final_stuff/final_project/: final_project.py
matlab/: Gas_masses.csv  Maxwell_Distribution.m  OhmsLawMiniProject.m  fifth_eigenvector.m  gaussian_plot.m  mini_project.m  tenth_eigenvector.m  test.m
python/: 5x5_matrix_eigen.py  ball.py  birthday_station.py  birthday_vector.py  eigenvalue_problem.py  energy.py  energyprojectile.py  framango pythonized  framango_pythonized.py  hi_lary_rockettt.py  mini_project.py  projectile_motion_comparison.py  ropes.py  roszko_pythonized.py  sanch_pythonize.py  students projects.py  test.py  trajectory.py  two_balls_bounce.py  two_balls_cross.py
(+17 files in other folders)
