[tool.poetry]
name = "repl_python3_scientific-programming-PeterK-UWP"
version = "0.1.0"
description = ""
authors = ["PeterKveton <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
vpython = "^7.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
